feat: Update labeler configuration, enhance backend test workflow, improve user creation logging, and refine password validation